# ynab-csv-converter

./: .gitignore  LICENSEN  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini  ynab-converter  ynab-csv-converter
.devcontainer/: devcontainer.json  post.sh
.github/workflows/: release.yaml
ynab_converter/: convert.py  formula-schema.yml  main.py  unicode_writer.py
ynab_converter/formats/: danskebank.py  nordnet.py  sparekassen.py  ynab.py
ynab_csv_converter/: __init__.py  __main__.py  formula-schema.yml  main.py  unicode_csv.py
ynab_csv_converter/formats/: __init__.py  americanexpress.py  banknordik.py  danskebank.py  eika.py  hypovereinsbank.py  laanspar.py  nordnet.py  saxotradergo.py  sparekassen-erhverv.py  sparekassen.py  starmoney.py  ynab.py
